# cardano-rest

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  README.rst  bors.toml  cabal.project  cabal.project.freeze  default.nix  docker-compose.yml  hie.yaml  index.html  nix-shell.project  release.nix  shell.nix  snapshot.yaml  stack.yaml
.buildkite/: docker-build-push-explorerApi.nix  docker-build-push-submitApi.nix  docker-build-push-txSubmit.nix  docker-build-push.nix  pipeline.yml
.github/workflows/: main.yml  release.yaml
cardano-tx-submit/: CHANGELOG.md
cardano-tx-submit/src/Cardano/TxSubmit/: Tx.hs  Types.hs  Web.hs
config/: pgpass.example  postgres_db.example  postgres_password.example  postgres_user.example
explorer-api/: CHANGELOG.md  cardano-explorer-api.cabal  shell.nix  swagger.yaml
explorer-api/app/: cardano-explorer-api-validate.hs  cardano-explorer-api.hs
explorer-api/app/Explorer/Web/: Validate.hs
explorer-api/app/Explorer/Web/Validate/: Address.hs  BlocksTxs.hs  ErrorHandling.hs  GenesisAddress.hs  Random.hs
explorer-api/src/Explorer/: Web.hs
explorer-api/src/Explorer/Web/: ClientTypes.hs  Error.hs  Query.hs  Server.hs
explorer-api/src/Explorer/Web/Api/: Legacy.hs
explorer-api/src/Explorer/Web/Api/HttpBridge/: AddressBalance.hs
explorer-api/src/Explorer/Web/Api/Legacy/: AddressSummary.hs  BlockAddress.hs  BlockPagesTotal.hs  BlocksPages.hs  BlocksTxs.hs  EpochPage.hs  EpochSlot.hs  GenesisAddress.hs  GenesisPages.hs  GenesisSummary.hs  RedeemSummary.hs  StatsTxs.hs  TxLast.hs  TxMeta.hs  TxsSummary.hs  Util.hs
explorer-api/test/Test/Explorer/Web/: ClientTypesSpec.hs
explorer-api/test/Test/Explorer/Web/Api/Legacy/: UtilSpec.hs
explorer-api/test/Test/Explorer/Web/Property/: Types.hs
migration-guide/: 404.html  Makefile  README.md  index.html  mkdocs.yml  requirements.txt  sitemap.xml
migration-guide/explorer-api/: index.html
migration-guide/search/: search_index.json
migration-guide/src/: explorer-api.md  index.md  submit-api.md
migration-guide/submit-api/: index.html
nix/: default.nix  docker.nix  haskell.nix  pkgs.nix  scripts.nix  sources.json  stack-shell.nix
nix/docker-monolithic/: README.md  default.nix
nix/nixos/: cardano-explorer-api-service.nix  cardano-submit-api-service.nix  cardano-tx-submit-service.nix  module-list.nix
rest-common/: cardano-rest-common.cabal
rest-common/src/Cardano/Rest/: Parsers.hs  Types.hs  Web.hs
submit-api/: CHANGELOG.md  README.md  cardano-submit-api.cabal  index.html  swagger.yaml
submit-api/app/: cardano-submit-api.hs
submit-api/src/Cardano/: TxSubmit.hs
submit-api/src/Cardano/TxSubmit/: Config.hs  ErrorRender.hs  JsonOrphans.hs  Metrics.hs  Node.hs  Parsers.hs  Tx.hs  Types.hs  Util.hs  Web.hs
submit-api/src/Cardano/TxSubmit/CLI/: Parsers.hs  Types.hs
submit-api/src/Cardano/TxSubmit/Rest/: Parsers.hs  Types.hs
submit-api/src/Cardano/TxSubmit/Tracing/: ToObjectOrphans.hs
tests/: Dockerfile  Makefile  README.md  conf.d  docker-compose.yml  pom.xml  pytest.ini  readme.md  shell.nix  test_read_api.py  tests_functional-data-intensive.xml  tests_functional-data-validation.xml  tests_functional-smoke.xml  tests_oracle.xml  tests_performance-runner.sh  tests_run-all.xml
tests/read/: test_data.py  test_regressions.py  test_schemas.py
tests/src/test/: README.md
tests/src/test/resources/: config.properties  example_queries_to_get_data.sql
tests/src/test/resources/data/mainnet/: addresses.txt  blocks.txt  blocks_and_addresses.txt  transactions.txt
tests/src/test/resources/data/testnet/: addresses.txt  blocks.txt  blocks_and_addresses.txt  transactions.txt
tests/src/test/resources/schemas/: valid-addresses-summary-address-schema.json  valid-block-blockhash-address-address-schema.json  valid-blocks-pages-schema.json  valid-blocks-pages-total-schema.json  valid-blocks-summary-blockhash-schema.json  valid-blocks-txs-blockhash-schema.json  valid-epochs-epoch-schema.json  valid-epochs-epoch-slot-schema.json  valid-genesis-address-pages-total-schema.json  valid-genesis-address-schema.json  valid-genesis-summary-schema.json  valid-stats-txs-schema.json  valid-supply-ada-schema.json  valid-txs-last-schema.json  valid-txs-summary-txid-schema.json
tests/src/test/scala/com/cardano/rest/tests/: DataStore.scala
tests/src/test/scala/com/cardano/rest/tests/functional/: ApiResponseComparison.java  BaseTest.java
tests/src/test/scala/com/cardano/rest/tests/functional/data_intensive/: AddressesTest.java  BlocksTest.java  EpochsTest.java  TransactionsTest.java
tests/src/test/scala/com/cardano/rest/tests/functional/data_validation/: AddressesTest.java
tests/src/test/scala/com/cardano/rest/tests/functional/oracle/: AddressesTest.java  BlocksTest.java  EpochsTest.java  GenesisTest.java  TransactionsTest.java
tests/src/test/scala/com/cardano/rest/tests/functional/smoke_tests/: AddressesTest.java  BlocksTest.java  EpochsTest.java  GenesisTest.java  TransactionsTest.java
tests/src/test/scala/com/cardano/rest/tests/simulations/performance/addresses/: AddressesSummaryAddressSimulation.scala  BlockBlockhashAddressAddressSimulation.scala
tests/src/test/scala/com/cardano/rest/tests/simulations/performance/blocks/: BlocksPagesSimulation.scala  BlocksPagesTotalSimulation.scala  BlocksSummaryBlockhashSimulation.scala  BlocksTxsBlockhashSimulation.scala
tests/src/test/scala/com/cardano/rest/tests/simulations/performance/epochs/: EpochsEpochSimulation.scala  EpochsEpochSlotsSlotSimulation.scala
tests/src/test/scala/com/cardano/rest/tests/simulations/performance/genesis/: GenesisAddressPagesTotalSimulation.scala  GenesisAddressSimulation.scala  GenesisSummarySimulation.scala  SupplyAdaSimulation.scala
tests/src/test/scala/com/cardano/rest/tests/simulations/performance/transactions/: StatsTxsSimulation.scala  TxsLastSimulation.scala  TxsSummaryTxSimulation.scala
tx-submit/: cardano-tx-submit.cabal
tx-submit/src/Cardano/TxSubmit/: Web.hs
