cabal-version:          >= 1.10

-- http://haskell.org/cabal/users-guide/

name:                   cardano-explorer-api
version:                2.1.3
synopsis:               A Block Explorer for the Cardano network
description:
homepage:               https://github.com/input-output-hk/cardano-explorer
bug-reports:            https://github.com/input-output-hk/cardano-explorer/issues
license:                Apache-2.0
license-file:           LICENSE
author:                 IOHK Engineering Team
maintainer:             operations@iohk.io
copyright:              (c) 2019 IOHK
category:               Language
build-type:             Simple
extra-source-files:     CHANGELOG.md

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall
                        -Werror
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Weverything
                        -Wno-safe
                        -Wno-unsafe
                        -Wno-implicit-prelude
                        -Wno-all-missed-specialisations
                        -Wno-missing-import-lists

  exposed-modules:      Explorer.Web
                      , Explorer.Web.Api
                      , Explorer.Web.ClientTypes
                      , Explorer.Web.Error
                      , Explorer.Web.Api.Legacy
                      , Explorer.Web.Api.HttpBridge
                      , Explorer.Web.Api.HttpBridge.AddressBalance
                      , Explorer.Web.Query
                      , Explorer.Web.Server
                      , Explorer.Web.Api.Legacy.AddressSummary
                      , Explorer.Web.Api.Legacy.BlockAddress
                      , Explorer.Web.Api.Legacy.BlockPagesTotal
                      , Explorer.Web.Api.Legacy.BlocksPages
                      , Explorer.Web.Api.Legacy.BlocksTxs
                      , Explorer.Web.Api.Legacy.EpochPage
                      , Explorer.Web.Api.Legacy.EpochSlot
                      , Explorer.Web.Api.Legacy.GenesisAddress
                      , Explorer.Web.Api.Legacy.GenesisPages
                      , Explorer.Web.Api.Legacy.GenesisSummary
                      , Explorer.Web.Api.Legacy.RedeemSummary
                      , Explorer.Web.Api.Legacy.StatsTxs
                      , Explorer.Web.Api.Legacy.TxLast
                      , Explorer.Web.Api.Legacy.TxsSummary
                      , Explorer.Web.Api.Legacy.Types
                      , Explorer.Web.Api.Legacy.Util

  -- other-modules:

  build-depends:        base                            >= 4.12         && < 4.13
                      , aeson
                      , base16-bytestring
                      , base58-bytestring
                      , bech32
                      , bytestring
                      , cardano-crypto-class
                      , cardano-db
                      , cardano-db-sync
                      , cardano-ledger
                      , cardano-rest-common
                      , containers
                      , deepseq
                      , esqueleto
                      , extra
                      , formatting
                      , generics-sop
                      , hashable
                      , memory
                      , monad-logger
                      , mtl
                      , ouroboros-consensus-shelley
                      , persistent
                      , persistent-postgresql
                      , QuickCheck
                      , servant
                      , servant-server
                      , shelley-spec-ledger
                      , text
                      , time
                      , transformers
                      , transformers-except
                      , warp

test-suite unit
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  hs-source-dirs:       test

  ghc-options:          -Wall
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns

  other-modules:        Test.Explorer.Web.ClientTypesSpec
                        Test.Explorer.Web.Api.Legacy.UtilSpec

  build-depends:        base                            >= 4.12         && < 4.13
                      , aeson
                      , cardano-db
                      , cardano-explorer-api
                      , cardano-ledger
                      , hedgehog
                      , hspec

  build-tool-depends:   hspec-discover:hspec-discover

executable cardano-explorer-api
  default-language:    Haskell2010
  main-is:             cardano-explorer-api.hs
  hs-source-dirs:      app

  ghc-options:          -Wall
                        -Werror
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns

                        -threaded
                        -rtsopts
                        "-with-rtsopts=-T -I0"

  -- other-modules:

  build-depends:        base                            >= 4.12         && < 4.13
                      , cardano-explorer-api
                      , cardano-db
                      , cardano-rest-common
                      , optparse-applicative
                      , warp
                      , Cabal

executable cardano-explorer-api-compare
  default-language:    Haskell2010
  main-is:             cardano-explorer-api-compare.hs
  hs-source-dirs:      app

  ghc-options:          -Wall
                        -Werror
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns

  -- other-modules:

  build-depends:        base                            >= 4.12         && < 4.13
                      , async
                      , cardano-explorer-api
                      , Diff
                      , bytestring
                      , http-conduit
                      , text
                      , text-ansi

executable cardano-explorer-api-validate
  default-language:    Haskell2010
  main-is:             cardano-explorer-api-validate.hs
  hs-source-dirs:      app

  ghc-options:          -Wall
                        -Werror
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns

  other-modules:        Explorer.Web.Validate
                        Explorer.Web.Validate.Address
                        Explorer.Web.Validate.BlocksTxs
                        Explorer.Web.Validate.ErrorHandling
                        Explorer.Web.Validate.GenesisAddress
                        Explorer.Web.Validate.Random

  build-depends:        base                            >= 4.12         && < 4.13
                      , async
                      , bytestring
                      , cardano-db
                      , cardano-db-sync
                      , cardano-explorer-api
                      , cardano-ledger
                      , esqueleto
                      , http-conduit
                      , monad-logger
                      , optparse-applicative
                      , persistent
                      , persistent-postgresql
                      , pretty-show
                      , random
                      , text
                      , text-ansi
                      , time
                      , transformers
