cabal-version:          >= 1.10

-- http://haskell.org/cabal/users-guide/

name:                   cardano-submit-api
version:                2.0.0
synopsis:               A web server that allows transactions to be POSTed to the cardano chain
description:
homepage:               https://github.com/input-output-hk/cardano-explorer
bug-reports:            https://github.com/input-output-hk/cardano-explorer/issues
license:                Apache-2.0
license-file:           LICENSE
author:                 IOHK Engineering Team
maintainer:             operations@iohk.io
copyright:              (c) 2019 IOHK
category:               Language
build-type:             Simple
extra-source-files:     CHANGELOG.md

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall
                        -Werror
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Weverything
                        -Wno-safe
                        -Wno-unsafe
                        -Wno-implicit-prelude
                        -Wno-all-missed-specialisations
                        -Wno-missing-import-lists

                        -threaded
                        -rtsopts
                        "-with-rtsopts=-T -I0"

  exposed-modules:      Cardano.TxSubmit

  other-modules:        Cardano.TxSubmit.Config
                      , Cardano.TxSubmit.ErrorRender
                      , Cardano.TxSubmit.Metrics
                      , Cardano.TxSubmit.Node
                      , Cardano.TxSubmit.Parsers
                      , Cardano.TxSubmit.Tracing.ToObjectOrphans
                      , Cardano.TxSubmit.Tx
                      , Cardano.TxSubmit.Types
                      , Cardano.TxSubmit.Util
                      , Cardano.TxSubmit.Web

  build-depends:        base                            >= 4.12         && < 4.13
                      , aeson
                      , async
                      , base16-bytestring
                      , bytestring
                      , cardano-api
                      , cardano-binary
                      , cardano-crypto-class
                      , cardano-crypto-wrapper
                      , cardano-prelude
                      , cardano-ledger
                      , containers
                      , contra-tracer
                      , cryptonite
                      , deepseq
                      , extra
                      , formatting
                      , generics-sop
                      , hashable
                      , http-media
                      , iohk-monitoring
                      , io-sim-classes
                      , memory
                      , monad-logger
                      , mtl
                      , network
                      , optparse-applicative
                      , ouroboros-consensus
                      , ouroboros-consensus-byron
                      , ouroboros-consensus-cardano
                      , ouroboros-network
                      , ouroboros-network-framework
                      , prometheus
                      , serialise
                      , servant
                      , servant-server
                      , text
                      , time
                      , transformers
                      , transformers-except
                      , typed-protocols
                      , typed-protocols-examples
                      , warp
                      , yaml

executable cardano-submit-api
  default-language:    Haskell2010
  main-is:             cardano-submit-api.hs
  hs-source-dirs:      app

  ghc-options:          -Wall
                        -Werror
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns

  -- other-modules:

  build-depends:        base                            >= 4.12         && < 4.13
                      , cardano-submit-api
                      , optparse-applicative

test-suite unit
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  main-is:              test.hs
  hs-source-dirs:       test

  -- other-modules:        Test.IO.Explorer.Web.Query

  ghc-options:          -Wall
                        -Werror
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns

  build-depends:        base                            >= 4.12         && < 4.13
